Allow redirect from https to http; Load userinfo for first login.
Former-commit-id: eb13e9ff6eb0976f5ecabcd6dea3aa185c0b18f9 [formerly e0a7e5e5a2a329e26e3c6cb72664e1b1f5d0cf79]
Former-commit-id: b53a301f21cd7b01d11f9afef222ea68dac85ef0

--- a/ExViewer/Views/LogOnDialog.xaml
+++ b/ExViewer/Views/LogOnDialog.xaml
@@ -16,6 +16,22 @@
     <ContentDialog.Template>
         <ControlTemplate TargetType="ContentDialog">
             <Border x:Name="Container">
+                <Border.Resources>
+                    <x:Double x:Key="ContentDialogMinWidth">320</x:Double>
+                    <x:Double x:Key="ContentDialogMaxWidth">548</x:Double>
+                    <x:Double x:Key="ContentDialogMinHeight">184</x:Double>
+                    <x:Double x:Key="ContentDialogMaxHeight">756</x:Double>
+                    <x:Double x:Key="ContentDialogButtonMinWidth">130</x:Double>
+                    <x:Double x:Key="ContentDialogButtonMaxWidth">202</x:Double>
+                    <x:Double x:Key="ContentDialogButtonHeight">32</x:Double>
+                    <x:Double x:Key="ContentDialogTitleMaxHeight">56</x:Double>
+                    <Thickness x:Key="ContentDialogBorderWidth">1</Thickness>
+                    <Thickness x:Key="ContentDialogButton1HostMargin">24,0,0,24</Thickness>
+                    <Thickness x:Key="ContentDialogButton2HostMargin">4,0,24,24</Thickness>
+                    <Thickness x:Key="ContentDialogContentMargin">24,0,24,0</Thickness>
+                    <Thickness x:Key="ContentDialogContentScrollViewerMargin">0,0,0,24</Thickness>
+                    <Thickness x:Key="ContentDialogTitleMargin">24,18,24,0</Thickness>
+                </Border.Resources>
                 <Grid x:Name="LayoutRoot">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
