--- a/ExViewer/Views/AboutPage.xaml
+++ b/ExViewer/Views/AboutPage.xaml
@@ -172,7 +172,7 @@ M197.5-48.8l-5.4,0c-5.4-0.5-9.5-2.5-11.9-5.7c-0.4-0.6-0.8-1.3-1.2-2.1l0,0c-0.2-0
 	c-1.6,1.5-3.2,2.9-4.9,4.3c-1.9,1.6-3.8,3.1-5.7,4.5c-5.9,4.3-12,8.1-18.2,11c-2.7,1.3-5.4,2.4-8.1,3.4c-3.5,1.3-6.8,2.2-10,2.8
 	C201.1-49.2,199.3-48.9,197.5-48.8L197.5-48.8z
 "
-                          Width="150"
+                          Height="50"
                           Fill="{StaticResource SystemControlForegroundBaseHighBrush}"
                           Stretch="Uniform" />
                 </HyperlinkButton>
@@ -185,6 +185,9 @@ M197.5-48.8l-5.4,0c-5.4-0.5-9.5-2.5-11.9-5.7c-0.4-0.6-0.8-1.3-1.2-2.1l0,0c-0.2-0
                 <HyperlinkButton Margin="4,0"
                                  Content="View source code at GitHub.com"
                                  NavigateUri="https://github.com/OpportunityLiu/ExViewer" />
+                <HyperlinkButton Margin="4,0"
+                                 Content="Help translate tags into Chinese"
+                                 NavigateUri="https://github.com/Mapaler/EhTagTranslator/wiki" />
                 <HyperlinkButton Margin="4,0"
                                  Content="E-Hentai Forums"
                                  NavigateUri="https://forums.e-hentai.org/index.php" />
