enum setting localization
Former-commit-id: 2fd1ca8fe08e2ad1c47b761e50304fb7b5f66d22 [formerly a4a1d77924d02a41b2307a31ef9774f4be943039]
Former-commit-id: 4fa210c2b8cfb4aa6d80d8802ddbcf5fc5b09348

--- a/ExViewer/Themes/Dark.xaml
+++ b/ExViewer/Themes/Dark.xaml
@@ -1,6 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="using:ExViewer.Themes">
-    <ImageBrush x:Key="UserBackgroundBrush"
+    <ImageBrush x:Key="UserBackgroundThemeBrush"
                 ImageSource="ms-appx:///Images/Dark/UserBackground.png" />
+    <SolidColorBrush x:Key="CategoryToggleButtonUncheckedForegroundThemeBrush"
+                     Color="White"
+                     Opacity="0.5" />
 </ResourceDictionary>
